# rust_wgpu_engine

./: Cargo.toml  README.md
crates/engine_api/: Cargo.toml
crates/engine_api/src/: lib.rs
crates/engine_core/: Cargo.toml
crates/engine_core/src/: lib.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/src/: components.rs  lib.rs  systems.rs
crates/engine_input/: Cargo.toml
crates/engine_input/src/: lib.rs
crates/engine_internals/ecs/: Cargo.toml
crates/engine_internals/ecs/src/: components.rs
crates/engine_internals/engine_core/: Cargo.toml
crates/engine_internals/engine_ecs/src/: components.rs  lib.rs  systems.rs
crates/engine_internals/engine_renderer/: Cargo.toml
crates/engine_internals/engine_renderer/src/: instance.rs  lib.rs  pipeline.rs  renderer.rs
crates/engine_internals/engine_time/: Cargo.toml
crates/engine_internals/renderer/: Cargo.toml
crates/engine_internals/time/src/: lib.rs
crates/engine_renderer/: Cargo.toml
crates/engine_renderer/src/: instance.rs  lib.rs  renderer.rs  shader.wgsl
game_app/: Cargo.toml
game_app/src/: main.rs
