[workspace]
members = ["crates/engine_api", "crates/engine_internals/*", "game_app"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
glam = "0.30.3"
bevy_ecs = "0.16.1"
wgpu = "25.0.2"
winit = "0.30.3"
pollster = "0.4.0"
log = "0.4.22"
bytemuck = { version = "1.23.0", features = ["derive"] }
env_logger = "0.11.3"
chrono = "0.4"
raw-window-handle = "0.6.2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["nakake"]
