[package]
name = "engine_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine_core" }
engine_ecs = { path = "../engine_ecs" }

wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
