[package]
name = "engine_renderer"
version.workspace = true
edition.workspace = true

[dependencies]
engine_core = { path = "../core" }
engine_ecs = { path = "../ecs" }

wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
bytemuck = { workspace = true }
